@@ -1,5 +1,9 @@
 2014-05-20  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* OutlineTreeModel.cpp: 
+
+2014-05-20  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* X3DBrowserEditor.cpp: 
 
 2014-05-20  Holger Seelig  <holger.seelig@yahoo.de>
